--- a/css/main.css
+++ b/css/main.css
@@ -18,10 +18,7 @@ textarea {
     color: #222;
 }
 
-body {
-    font-size: 1em;
-    line-height: 1.4;
-}
+
 
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
@@ -93,7 +90,126 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+body {
+    margin: 0;
+    padding: 0;
+    font-size: 1em;
+    line-height: 1.4;
+font-family: 'Chivo', sans-serif;
+    background-color: #28282c;
+    color:white
+}
 
+#search {
+    position: absolute;
+    top:9px;
+    right:10px;
+    border: none;
+    outline:none;
+    border-radius: 3px;
+    padding: 8px 11px 8px 11px;
+font-family: 'Chivo', sans-serif;
+    font-size: 1em;
+    background-color: #424242;
+    color:#7d7d7d;
+    cursor: pointer;
+    z-index: -21;
+}
+
+#search:hover {
+    background-color: #4b4b4b;
+    color:#ababab;
+
+   -webkit-transition: 100ms linear;
+     -moz-transition: 100ms linear;
+     -o-transition: 100ms linear;
+     -ms-transition: 100ms linear;
+     transition: 100ms linear;  
+}
+
+#zip {
+    width: 100%;
+    border: none;
+font-family: 'Chivo', sans-serif;
+    font-size: 1.5em;
+    font-weight: medium;
+    color:#75747f;
+    background-color: #353535;
+    border-bottom: 1px solid #55565e;
+    padding:12px 0px 12px 12px;
+         -webkit-transition: 100ms linear;
+     -moz-transition: 100ms linear;
+     -o-transition: 100ms linear;
+     -ms-transition: 100ms linear;
+     transition: 100ms linear;
+}
+
+#zip:focus {
+   background-color: #38383d;
+
+    color:white;
+    font-size: .5em;
+    border: none;
+    outline:none;
+    padding:22px 0px 22px 12px;
+    border-bottom: 1px solid #55565e;
+
+     -webkit-transition: .25s linear;
+     -moz-transition: .25s linear;
+     -o-transition: .25s linear;
+     -ms-transition: .25s linear;
+     transition: .25s linear;
+
+
+}
+
+::-webkit-input-placeholder {
+   color: #75747f;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: #75747f;  
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: #75747f;  
+}
+
+:-ms-input-placeholder {  
+   color: #75747f;  
+}
+
+#forecast-template {
+    width: 1000px;
+}
+
+.item {
+    overflow: hidden;
+    float: left;
+    color:white;
+    padding: 0px 20px 4px 20px;
+    
+    width: 100%;
+    border-bottom: 1px solid #55565e;
+
+}
+
+#output {
+    width: 100%;
+}
+
+.item h1 {
+font-size: 2.2em;
+font-weight: 100;
+width:100%;
+display: block;
+}
+
+
+#output { margin-left: 0; display: none; }
+#output img { height: 20px; width: 20px; vertical-align: top; }
+#error { color: red; font-weight: bold; padding-left: 15px; }
+.alert { margin-top: 15px; display: none; }
 
 
 
@@ -298,3 +414,8 @@ textarea {
         page-break-after: avoid;
     }
 }
+
+
+
+
+
